# Product-Scraping

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: api.py
configs/: settings.py
scrapper/: models.py  openfoodfacts.py
tasks/: tasks.py
